--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -358,7 +358,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>sdl-generator-tools</artifactId>
-            <version>2.3.0-SNAPSHOT</version>
+            <version>2.2.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
