--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -217,7 +217,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>2.13.0-SNAPSHOT</version>
+            <version>2.13.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -303,7 +303,7 @@
             <!-- New Vanity URL dashboard -->
             <groupId>org.jahia.modules</groupId>
             <artifactId>site-settings-seo</artifactId>
-            <version>3.4.0-SNAPSHOT</version>
+            <version>3.4.0</version>
             <type>jar</type>
             <scope>runtime</scope>
         </dependency>
