--- a/.github/workflows/do-it-all.yml
+++ b/.github/workflows/do-it-all.yml
@@ -387,7 +387,7 @@ jobs:
           # If we are in a PR, we use master for the remote branch
           # If we are not in a PR, we use the current branch for the remote branch
           if [[ "${{ github.event.pull_request.head.ref }}" == "" ]]; then
-            echo "Currently NOT in a PR: ${{ github.event.pull_request.head.ref }}, using ${{ steps.branch-name.outputs.current_branch }} as remote branch"
+            echo "Currently NOT in a PR (${{ github.event.pull_request.head.ref }}), using current branch: ${{ steps.branch-name.outputs.current_branch }} as remote branch"
             echo "remote_branch=${{ steps.branch-name.outputs.current_branch }}" >> $GITHUB_OUTPUT
           else
             echo "Currently in a PR with head: ${{ github.event.pull_request.head.ref }}, using master as remote branch"
@@ -400,6 +400,7 @@ jobs:
           workflow: do-it-all.yml
           ref: ${{ steps.exports.outputs.remote_branch }}
           repo: Jahia/jahia-ee
+          wait-for-completion-timeout: 2h
           inputs: '{ "parent_image_tag": "${{needs.build.outputs.image_tag}}" }'
           token: ${{ secrets.GH_API_TOKEN }}
       - name: Get results of Jahia-ee
