--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -145,13 +145,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcontent</artifactId>
-            <version>2.8.0</version>
+            <version>2.9.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>content-editor</artifactId>
-            <version>3.4.2</version>
+            <version>4.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
