--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -145,7 +145,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcontent</artifactId>
-            <version>2.9.0-SNAPSHOT</version>
+            <version>2.9.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -216,7 +216,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>2.15.0-SNAPSHOT</version>
+            <version>2.15.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
