--- a/jahia-installer-package/pom.xml
+++ b/jahia-installer-package/pom.xml
@@ -54,14 +54,14 @@
     <artifactId>jahia-installer-package</artifactId>
     <name>Jahia Installer Package</name>
     <packaging>pom</packaging>
-
+    
     <properties>
         <product.name>Jahia</product.name>
         <product.version>${project.version}</product.version>
         <product.fullname>Jahia-CommunityDistribution-${product.version}</product.fullname>
         <staging.dir>${project.build.directory}/izpack</staging.dir>
     </properties>
-
+    
     <dependencies>
         <dependency>
             <groupId>org.jahia.configuration</groupId>
@@ -75,10 +75,10 @@
             <artifactId>jahia-installer-lib</artifactId>
             <version>${jahia.installers.version}</version>
         </dependency>
-
+        
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
             <version>${driver.mysql.version}</version>
         </dependency>
         <dependency>
@@ -91,7 +91,7 @@
             <artifactId>mariadb-java-client</artifactId>
             <version>${driver.mariadb.version}</version>
         </dependency>
-
+        
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
@@ -102,7 +102,7 @@
             <artifactId>izpack-standalone-compiler</artifactId>
             <version>${izpack.version}</version>
         </dependency>
-
+        
         <dependency>
             <groupId>org.jahia.packages</groupId>
             <artifactId>jahia-core-modules</artifactId>
@@ -118,7 +118,7 @@
             <type>yaml</type>
         </dependency>
     </dependencies>
-
+    
     <profiles>
         <profile>
             <id>os-family-windows</id>
@@ -231,7 +231,8 @@
                                             <version>${launch4j.version}</version>
                                             <classifier>core</classifier>
                                             <overWrite>false</overWrite>
-                                            <outputDirectory>${project.build.directory}/${launch4j.run.dir}</outputDirectory>
+                                            <outputDirectory>${project.build.directory}/${launch4j.run.dir}
+                                            </outputDirectory>
                                             <destFileName>launch4j.jar</destFileName>
                                         </artifactItem>
                                     </artifactItems>
@@ -253,7 +254,7 @@
                                     <name>product.version.nosnapshot</name>
                                     <value>${project.version}</value>
                                     <regex>-.*</regex>
-                                    <replacement />
+                                    <replacement/>
                                     <failIfNoMatch>false</failIfNoMatch>
                                 </configuration>
                             </execution>
@@ -269,15 +270,15 @@
                                 <configuration>
                                     <target>
                                         <path id="launch4j_classpath">
-                                            <pathelement location="${project.build.directory}/${launch4j.run.dir}/launch4j.jar" />
+                                            <pathelement location="${project.build.directory}/${launch4j.run.dir}/launch4j.jar"/>
                                         </path>
-                                        <chmod dir="${project.build.directory}/${launch4j.run.dir}/bin" perm="755" includes="**" />
-                                        <taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask" classpathref="launch4j_classpath" />
+                                        <chmod dir="${project.build.directory}/${launch4j.run.dir}/bin" perm="755" includes="**"/>
+                                        <taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask" classpathref="launch4j_classpath"/>
                                         <launch4j>
                                             <config outfile="${project.build.directory}/${installer.filename}.exe" jarPath="${project.build.directory}/${installer.filename}.jar" dontWrapJar="false" headerType="gui" priority="normal" downloadUrl="http://java.com/download" supportUrl="http://www.jahia.com" stayAlive="false" icon="${project.build.directory}/images/jahia.ico">
-                                                <jre minVersion="1.8.0" />
-                                                <splash file="${project.build.directory}/images/splash.bmp" waitForWindow="true" timeout="60" timeoutErr="true" />
-                                                <versionInfo fileVersion="${product.version.nosnapshot}" txtFileVersion="${product.version}" fileDescription="${product.name} - Community Distribution - Windows Installer" copyright="Copyright 2002-${year} ${jahia.manifest.vendor.name}" productVersion="${product.version.nosnapshot}" txtProductVersion="${product.version}" productName="${product.name} - Community Distribution" companyName="${jahia.manifest.vendor.name}" internalName="Jahia-CommunityDistribution" originalFilename="Jahia-CommunityDistribution.exe" />
+                                                <jre minVersion="1.8.0"/>
+                                                <splash file="${project.build.directory}/images/splash.bmp" waitForWindow="true" timeout="60" timeoutErr="true"/>
+                                                <versionInfo fileVersion="${product.version.nosnapshot}" txtFileVersion="${product.version}" fileDescription="${product.name} - Community Distribution - Windows Installer" copyright="Copyright 2002-${year} ${jahia.manifest.vendor.name}" productVersion="${product.version.nosnapshot}" txtProductVersion="${product.version}" productName="${product.name} - Community Distribution" companyName="${jahia.manifest.vendor.name}" internalName="Jahia-CommunityDistribution" originalFilename="Jahia-CommunityDistribution.exe"/>
                                             </config>
                                         </launch4j>
                                     </target>
@@ -299,7 +300,7 @@
             </build>
         </profile>
     </profiles>
-
+    
     <build>
         <outputDirectory>${basedir}/target</outputDirectory>
         <resources>
@@ -345,7 +346,7 @@
                     </execution>
                 </executions>
             </plugin>
-
+            
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
@@ -415,7 +416,8 @@
                                     <classifier>all</classifier>
                                     <type>zip</type>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${project.build.directory}/artifacts/shared-libraries</outputDirectory>
+                                    <outputDirectory>${project.build.directory}/artifacts/shared-libraries
+                                    </outputDirectory>
                                     <excludes>META-INF/**</excludes>
                                 </artifactItem>
                             </artifactItems>
@@ -452,7 +454,9 @@
                                     <classifier>provisioning</classifier>
                                     <type>yaml</type>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${project.build.directory}/artifacts/jahia-data/patches/provisioning</outputDirectory>
+                                    <outputDirectory>
+                                        ${project.build.directory}/artifacts/jahia-data/patches/provisioning
+                                    </outputDirectory>
                                     <destFileName>1.1-jahia-core-modules.contextInitialized.yaml</destFileName>
                                 </artifactItem>
                                 <artifactItem>
@@ -462,14 +466,16 @@
                                     <classifier>provisioning</classifier>
                                     <type>yaml</type>
                                     <overWrite>false</overWrite>
-                                    <outputDirectory>${project.build.directory}/artifacts/jahia-data/patches/provisioning</outputDirectory>
+                                    <outputDirectory>
+                                        ${project.build.directory}/artifacts/jahia-data/patches/provisioning
+                                    </outputDirectory>
                                     <destFileName>3.1-jahia-additional-modules.contextInitialized.yaml</destFileName>
                                 </artifactItem>
                             </artifactItems>
                             <stripVersion>true</stripVersion>
                         </configuration>
                     </execution>
-
+                    
                     <execution>
                         <id>download</id>
                         <phase>process-resources</phase>
@@ -480,11 +486,12 @@
                             <excludeTransitive>false</excludeTransitive>
                             <useRepositoryLayout>true</useRepositoryLayout>
                             <copyPom>true</copyPom>
-                            <outputDirectory>${project.build.directory}/artifacts/jahia-war/WEB-INF/karaf/system</outputDirectory>
+                            <outputDirectory>${project.build.directory}/artifacts/jahia-war/WEB-INF/karaf/system
+                            </outputDirectory>
                             <includeArtifactIds>${artifactIds}</includeArtifactIds>
                         </configuration>
                     </execution>
-
+                    
                     <execution>
                         <id>copy-configurators</id>
                         <phase>process-resources</phase>
@@ -511,8 +518,8 @@
                         </goals>
                         <configuration>
                             <target>
-                                <loadfile property="buildNumber-ce" srcFile="${project.build.directory}/marker/META-INF/jahia-impl-marker.txt" />
-                                <echo message="installer.filename=${product.fullname}-r${buildNumber-ce}" file="${project.build.directory}/version.properties" />
+                                <loadfile property="buildNumber-ce" srcFile="${project.build.directory}/marker/META-INF/jahia-impl-marker.txt"/>
+                                <echo message="installer.filename=${product.fullname}-r${buildNumber-ce}" file="${project.build.directory}/version.properties"/>
                             </target>
                         </configuration>
                     </execution>
@@ -522,36 +529,36 @@
                         <configuration>
                             <target>
                                 <java classname="org.jahia.izpack.ResourcesConverter">
-                                    <arg value="izpack.i18n.packsLang" />
+                                    <arg value="izpack.i18n.packsLang"/>
                                     <!--
                                     <arg value="en,fr,de,it,pt,es" />
                                     -->
-                                    <arg value="en,fr,de" />
-                                    <arg value="${project.build.directory}/izpack/i18n" />
+                                    <arg value="en,fr,de"/>
+                                    <arg value="${project.build.directory}/izpack/i18n"/>
                                     <classpath>
-                                        <path refid="maven.dependency.classpath" />
+                                        <path refid="maven.dependency.classpath"/>
                                     </classpath>
                                 </java>
                                 <java classname="org.jahia.izpack.ResourcesConverter">
-                                    <arg value="izpack.i18n.userInputLang" />
+                                    <arg value="izpack.i18n.userInputLang"/>
                                     <!--
                                     <arg value="en,fr,de,it,pt,es" />
                                     -->
-                                    <arg value="en,fr,de" />
-                                    <arg value="${project.build.directory}/izpack/i18n" />
+                                    <arg value="en,fr,de"/>
+                                    <arg value="${project.build.directory}/izpack/i18n"/>
                                     <classpath>
-                                        <path refid="maven.dependency.classpath" />
+                                        <path refid="maven.dependency.classpath"/>
                                     </classpath>
                                 </java>
                                 <java classname="org.jahia.izpack.ResourcesConverter">
-                                    <arg value="izpack.i18n.customLang" />
+                                    <arg value="izpack.i18n.customLang"/>
                                     <!--
                                     <arg value="en,fr,de,it,pt,es" />
                                     -->
-                                    <arg value="en,fr,de" />
-                                    <arg value="${project.build.directory}/izpack/i18n" />
+                                    <arg value="en,fr,de"/>
+                                    <arg value="${project.build.directory}/izpack/i18n"/>
                                     <classpath>
-                                        <path refid="maven.dependency.classpath" />
+                                        <path refid="maven.dependency.classpath"/>
                                     </classpath>
                                 </java>
                             </target>
