--- a/.github/workflows/do-it-all.yml
+++ b/.github/workflows/do-it-all.yml
@@ -125,15 +125,6 @@ jobs:
           echo "OUTPUT: parent_tag = ${{steps.tags.outputs.parent_tag}}"
 
       # Series of steps only executed when pushing to master or to one of the maintenance branches
-      - name: mvn clean deploy
-        if: ${{ github.event_name != 'pull_request' }}
-        shell: bash
-        run: |
-          mvn -U -ntp -s .github/maven.settings.xml -U -e \
-            -Dparent.tag=`cat parent.tag` \
-            -Dimage.tag=`cat image.tag` \
-            clean deploy \
-            -Pdocker,installer,windows-installer
       - uses: jahia/jahia-modules-action/docker-tags@v2
         if: ${{ github.event_name != 'pull_request' }}
         with:
@@ -141,7 +132,16 @@ jobs:
           docker_password: ${{ secrets.DOCKERHUB_PASSWORD }}
           version: ${{steps.tags.outputs.parent_tag}}
           repo: "jahia-opencore-dev"
-          dry-run: false
+          dry-run: true
+      - name: mvn clean deploy
+        if: ${{ github.event_name != 'pull_request' }}
+        shell: bash
+        run: |
+          mvn -U -ntp -s .github/maven.settings.xml -U -e \
+            -Dparent.tag=`cat parent.tag` \
+            -Dimage.tag=`echo $(cat image.tag) , ${{ env.PARAM_VERSION_MAJOR }}.${{ env.PARAM_VERSION_MINOR}}.${{ env.PARAM_VERSION_HF}}${{ env.PARAM_VERSION_CLASSIFIER}} , ${{ env.PARAM_VERSION_MAJOR }}.${{ env.PARAM_VERSION_MINOR}}${{ env.PARAM_VERSION_CLASSIFIER}} , ${{ env.PARAM_VERSION_MAJOR }}${{ env.PARAM_VERSION_CLASSIFIER}}"` \
+            clean deploy \
+            -Pdocker,installer,windows-installer
       - name: Build graalvm image
         shell: bash
         if: ${{ github.event_name == 'push' }}
