--- a/.github/workflows/do-it-all.yml
+++ b/.github/workflows/do-it-all.yml
@@ -137,11 +137,20 @@ jobs:
         if: ${{ github.event_name != 'pull_request' }}
         shell: bash
         run: |
-          mvn -U -ntp -s .github/maven.settings.xml -U -e \
-            -Dparent.tag=`cat parent.tag` \
-            -Dimage.tag=`echo "$(cat image.tag),${{ env.PARAM_VERSION_MAJOR }}.${{ env.PARAM_VERSION_MINOR}}.${{ env.PARAM_VERSION_HF}}${{ env.PARAM_VERSION_CLASSIFIER}},${{ env.PARAM_VERSION_MAJOR }}.${{ env.PARAM_VERSION_MINOR}}${{ env.PARAM_VERSION_CLASSIFIER}},${{ env.PARAM_VERSION_MAJOR }}${{ env.PARAM_VERSION_CLASSIFIER}}"` \
-            clean deploy \
-            -Pdocker,installer,windows-installer
+          if [[ "${{ env.PARAM_VERSION_CLASSIFIER_SUFFIX }}" != "" ]]; then
+            mvn -U -ntp -s .github/maven.settings.xml -U -e \
+                -Dparent.tag=`cat parent.tag` \
+                -Dimage.tag=`cat image.tag` \
+                clean deploy \
+                -Pdocker,installer,windows-installer
+          elif
+            mvn -U -ntp -s .github/maven.settings.xml -U -e \
+              -Dparent.tag=`cat parent.tag` \
+              -Dimage.tag=`cat image.tag` \
+              -Dimage.alias=`echo "latest,${{ env.PARAM_VERSION_MAJOR }}.${{ env.PARAM_VERSION_MINOR}}.${{ env.PARAM_VERSION_HF}}${{ env.PARAM_VERSION_CLASSIFIER}},${{ env.PARAM_VERSION_MAJOR }}.${{ env.PARAM_VERSION_MINOR}}${{ env.PARAM_VERSION_CLASSIFIER}},${{ env.PARAM_VERSION_MAJOR }}${{ env.PARAM_VERSION_CLASSIFIER}}"` \
+              clean deploy \
+              -Pdocker,installer,windows-installer
+          fi
       - name: Build graalvm image
         shell: bash
         if: ${{ github.event_name == 'push' }}
