--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -259,19 +259,19 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>profile</artifactId>
-            <version>8.0.0</version>
+            <version>8.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>rolesmanager</artifactId>
-            <version>8.4.0</version>
+            <version>8.5.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>8.3.0</version>
+            <version>8.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -381,7 +381,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>personal-api-tokens</artifactId>
-            <version>1.3.0</version>
+            <version>1.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
