--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -228,7 +228,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>security-filter-tools</artifactId>
-            <version>2.3.0</version>
+            <version>2.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -277,7 +277,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>seo</artifactId>
-            <version>8.1.0</version>
+            <version>8.2.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
