TECH-1118 - Fix regex (#542)

--- a/.github/workflows/do-it-all.yml
+++ b/.github/workflows/do-it-all.yml
@@ -12,8 +12,8 @@ on:
   push:
     branches:
       - master
-      - '/feature-.*/'
-      - '/JAHIA-[0-9]-[0-9]-[0-9]-X-BRANCH/'
+      - 'feature-.*'
+      - 'JAHIA-[0-9]-[0-9]-[0-9]-X-BRANCH'
   workflow_dispatch:
     inputs:
       parent_image_tag:
