--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -157,7 +157,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>contentRetrieval</artifactId>
-            <version>8.0.0</version>
+            <version>8.1.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -363,7 +363,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>content-security-policy</artifactId>
-            <version>2.3.0</version>
+            <version>2.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
