--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -271,13 +271,13 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>search</artifactId>
-            <version>8.4.0-SNAPSHOT</version>
+            <version>8.3.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>seo</artifactId>
-            <version>8.2.0-SNAPSHOT</version>
+            <version>8.1.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
