--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -216,7 +216,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>graphql-dxm-provider</artifactId>
-            <version>2.17.0</version>
+            <version>2.18.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
