BACKLOG-20321: Enforce usage of docker-plugin or docker-plugin-amd64-only profiles. Split discovery image in another profile than docker (docker-discovery) so we can build only the amd64 version (#553)

--- a/.github/workflows/do-it-all.yml
+++ b/.github/workflows/do-it-all.yml
@@ -142,14 +142,14 @@ jobs:
                 -Dparent.tag=`cat parent.tag` \
                 -Dimage.tag=`cat image.tag` \
                 clean deploy \
-                -Pdocker,installer,windows-installer
+                -Pdocker,docker-plugin,installer,windows-installer
           else
             mvn -U -ntp -s .github/maven.settings.xml -U -e \
               -Dparent.tag=`cat parent.tag` \
               -Dimage.tag=`cat image.tag` \
               -Dimage.alias=`echo "latest,${{ env.PARAM_VERSION_MAJOR }}.${{ env.PARAM_VERSION_MINOR}}.${{ env.PARAM_VERSION_HF}}${{ env.PARAM_VERSION_CLASSIFIER}},${{ env.PARAM_VERSION_MAJOR }}.${{ env.PARAM_VERSION_MINOR}}${{ env.PARAM_VERSION_CLASSIFIER}},${{ env.PARAM_VERSION_MAJOR }}${{ env.PARAM_VERSION_CLASSIFIER}}"` \
               clean deploy \
-              -Pdocker,installer,windows-installer
+              -Pdocker,docker-plugin,installer,windows-installer
           fi
       - name: Build graalvm image
         shell: bash
