--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -339,7 +339,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>tools</artifactId>
-            <version>4.3.0</version>
+            <version>4.4.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
