--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -175,7 +175,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>app-shell</artifactId>
-            <version>2.8.0</version>
+            <version>2.8.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
