--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -253,7 +253,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>module-manager</artifactId>
-            <version>2.7.0</version>
+            <version>2.8.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
