--- a/.github/workflows/do-it-all.yml
+++ b/.github/workflows/do-it-all.yml
@@ -174,6 +174,7 @@ jobs:
             -Dparent.tag=${{steps.tags.outputs.parent_tag}}-graalvm \
             -Dimage.tag=${{steps.tags.outputs.image_tag}}-graalvm \
             deploy \
+            -Pdocker-plugin \
             -Dbamboo.buildNumber=${{ github.run_id }}
 
       # Series of steps only executed when in a PR
