--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -97,7 +97,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-ui-root</artifactId>
-            <version>1.7.0</version>
+            <version>1.8.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -145,7 +145,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jcontent</artifactId>
-            <version>2.10.0</version>
+            <version>2.11.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
