BACKLOG-20789 - Fix modules state check action (#580)

--- a/.github/actions/get-jahia-modules-state/action.yml
+++ b/.github/actions/get-jahia-modules-state/action.yml
@@ -54,8 +54,12 @@ runs:
         echo "-----------------------------------------------------------------------"
         echo "Modules without changes:"
         echo "------------------------"
-        cat modules-with-no-changes.txt
+        if [[ -e modules-with-no-changes.txt ]]; then
+          cat modules-with-no-changes.txt
+        fi
         echo "   "
         echo "Modules with changes:"
         echo "---------------------"
-        cat modules-with-changes.txt
+        if [[ -e modules-with-changes.txt ]]; then
+          cat modules-with-changes.txt
+        fi
