BACKLOG-21573: fixed installation conditions (#615)

--- a/core-modules/src/main/conditions.properties
+++ b/core-modules/src/main/conditions.properties
@@ -1,3 +1,3 @@
 sdl-generator-tools:'${jahia:operatingMode}' == 'development'
-ldap:('${jahia:installationType}' == 'development') || (org.jahia.osgi.BundleUtils.getOsgiService("org.osgi.service.cm.ConfigurationAdmin").listConfigurations("(service.factoryPid=org.jahia.services.usermanager.ldap)") != null)
-server-availability-manager:('${jahia:installationType}' != 'development')
+ldap:('${jahia:operatingMode}' == 'development') || (org.jahia.osgi.BundleUtils.getOsgiService("org.osgi.service.cm.ConfigurationAdmin").listConfigurations("(service.factoryPid=org.jahia.services.usermanager.ldap)") != null)
+server-availability-manager:('${jahia:operatingMode}' != 'development')
