TECH-1730 : provision luxe templates set and demo in Jahia installer (#667)

--- a/jahia-installer-package/pom.xml
+++ b/jahia-installer-package/pom.xml
@@ -469,7 +469,7 @@
                                     <outputDirectory>
                                         ${project.build.directory}/artifacts/jahia-data/patches/provisioning
                                     </outputDirectory>
-                                    <destFileName>3.1-jahia-additional-modules.contextInitialized.yaml</destFileName>
+                                    <destFileName>3.1-jahia-additional-modules.yaml</destFileName>
                                 </artifactItem>
                             </artifactItems>
                             <stripVersion>true</stripVersion>
