--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -94,5 +94,16 @@
             <version>8.0.0</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.modules.npm</groupId>
+            <artifactId>luxe-jahia-demo</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <type>tgz</type>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>luxe-prepackaged-website</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
