BACKLOG-22569: add legacy-default-components to the core (#671)

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -347,5 +347,10 @@
             <artifactId>npm-modules-engine</artifactId>
             <version>0.1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>legacy-default-components</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
