Revert "BACKLOG-23029: update administration and dashboard (#727)" (#728)
This reverts commit 5859823a1b2d0771ac3353429c2a84f8eff17541.

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -98,7 +98,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-administration</artifactId>
-            <version>1.10.0-SNAPSHOT</version>
+            <version>1.9.1</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -116,7 +116,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>jahia-dashboard</artifactId>
-            <version>1.10.0-SNAPSHOT</version>
+            <version>1.9.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
